<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LeaveSummary"
    android:background="@color/white">

    <TextView
        android:id="@+id/topContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="750dp"
        android:background="@color/green"
        android:gravity="center"
        android:paddingStart="50dp"
        android:text="@string/lvSum"
        android:textColor="@color/white"
        android:textSize="37sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/inner_widget_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.446"
        tools:ignore="RtlSymmetry,TextSizeCheck" />

    <ImageButton
        android:id="@+id/recbtn4"
        android:layout_width="95dp"
        android:layout_height="85dp"
        android:background="@drawable/title_bgcol"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94"
        app:srcCompat="@drawable/record_btn"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/summary_bt4"
        android:layout_width="95dp"
        android:layout_height="85dp"
        android:background="@drawable/title_bgcol"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94"
        app:srcCompat="@drawable/summary_btn1"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/exit_bt4"
        android:layout_width="95dp"
        android:layout_height="85dp"
        android:background="@drawable/title_bgcol"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.917"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94"
        app:srcCompat="@drawable/exit_btn"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/TVrec_bt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/verdana"
        android:gravity="center"
        android:text="@string/rec"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.970" />

    <TextView
        android:id="@+id/TVsumm_bt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/verdana"
        android:gravity="center"
        android:text="@string/smr"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.970" />

    <TextView
        android:id="@+id/TVexit_btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/verdana"
        android:gravity="center"
        android:text="@string/ext"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.970" />

    <View
        android:id="@+id/inner_widget_container"
        android:layout_width="380dp"
        android:layout_height="540dp"
        android:background="@drawable/title_bgcol"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="189dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/imgVlogosummary"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/imgviewlogo_bg"
        app:layout_constraintBottom_toTopOf="@+id/inner_widget_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.368"
        app:srcCompat="@drawable/ucwdlogo"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/employeenamecontainer"
        android:layout_width="345dp"
        android:layout_height="118dp"
        android:background="@drawable/title_bgcol"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/monthcontainer"
        app:layout_constraintEnd_toEndOf="@+id/inner_widget_container"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="@+id/inner_widget_container"
        app:layout_constraintTop_toBottomOf="@+id/yearcontainer"
        app:layout_constraintVertical_bias="0.526">

        <TextView
            android:id="@+id/TVemployeename"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/verdana"
            android:padding="20dp"
            android:text="@string/empName"
            android:textSize="21sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

        <SearchView
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/calendar_bgcol" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/yearcontainer"
        android:layout_width="345dp"
        android:layout_height="118dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/title_bgcol"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/inner_widget_container"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="@+id/inner_widget_container"
        app:layout_constraintTop_toTopOf="@+id/inner_widget_container">

        <TextView
            android:id="@+id/TVyear"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/verdana"
            android:padding="20dp"
            android:text="@string/yr"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/yearSpinner"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/calendar_bgcol" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/monthcontainer"
        android:layout_width="345dp"
        android:layout_height="118dp"
        android:layout_marginBottom="76dp"
        android:background="@drawable/title_bgcol"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/inner_widget_container"
        app:layout_constraintEnd_toEndOf="@+id/inner_widget_container"
        app:layout_constraintHorizontal_bias="0.485"

        app:layout_constraintStart_toStartOf="@+id/inner_widget_container">

        <TextView
            android:id="@+id/TVmonth"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/verdana"
            android:padding="20dp"
            android:text="@string/mnt"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/monthSpinner"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/calendar_bgcol" />
    </LinearLayout>

    <android.widget.Button
        android:id="@+id/btncontinue1"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:background="@drawable/leavesummarybtn1_bg"
        android:drawableEnd="@drawable/continue_btnleavesummary"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/cnt"
        android:textAllCaps="false"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/inner_widget_container"
        app:layout_constraintEnd_toEndOf="@+id/inner_widget_container"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="@+id/inner_widget_container"
        app:layout_constraintTop_toBottomOf="@+id/monthcontainer"
        app:layout_constraintVertical_bias="0.411"
        tools:ignore="TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>